# mapSlammer

./: README.md  full_runCOLOR.bash
docs/: foo.txt
docs/images/: foo.txt
programs/: foo.txt
programs/1_keypointsReprojection/: 1_reprojecter.py
programs/3_scalation/: 3_rescalerCOLOR_ransac.cc  CMakeLists.txt
programs/4_refination/: 4_refinator.cc  CMakeLists.txt
programs/5_visualization/maps/: CMakeLists.txt  visualize_demon.cc  visualize_denseMap.cc  visualize_fineMap.cc  visualize_sparseMap.cc
programs/5_visualization/reprojection/: visualizeReprojection.py
